# Landscaper

./: .gitignore  404.html  COPYRIGHT  Dockerfile  README.md  cnn.ipynb  dimenet_profile.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-docs.yml  publish-image-ghcr.yml  pytest.yml
docs/: index.md  quickstart.md
docs/notebooks/: cnn.ipynb  gnn.ipynb  rnn.ipynb
docs/scripts/: gen_index.py  gen_ref_pages.py
docs/stylesheets/: extra.css
examples/: computation.ipynb
landscaper/: utils.py
notebooks/: computation.ipynb
notebooks/cnn/: index.html
notebooks/gnn/: index.html
notebooks/rnn/: index.html
quickstart/: index.html
reference/SUMMARY/: index.html
reference/landscaper/: index.html
reference/landscaper/compute/: index.html
reference/landscaper/hessian/: index.html
reference/landscaper/landscape/: index.html
reference/landscaper/plots/: index.html
reference/landscaper/tda/: index.html
reference/landscaper/topology_profile/: index.html
reference/landscaper/utils/: index.html
scripts/gen_ref_pages/: index.html
search/: search_index.json
src/landscaper/: __init__.py  compute.py  hessian.py  landscape.py  plots.py  tda.py  topology_profile.py  utils.py
src/pylosslandscapes/: compute.py  curves.py  landscape.py  math.py  plots.py  tda.py
tests/: conftest.py  resnet.py  test_compute.py  test_hessian.py  test_plots.py  test_profile.py  utils.py
