[project]
name = "Landscaper"
version = "0.1.0"
description = "A comprehensive Python framework designed for exploring the loss landscapes of deep learning models."
authors = [
    {name = "Jiaqing Chen", email = "jchen501@asu.edu"},
    {name = "Tiankai Xie", email = "txie21@asu.edu"},
    {name = "Nicholas Hadler", email = "nhadler@berkeley.edu"},
    {name = "Rostyslav Hnatyshyn", email = "rhnatysh@asu.edu"}
]

readme = "README.md"
requires-python = ">=3.10.15"
dependencies = [
    "gudhi>=3.11.0",
    "matplotlib>=3.10.1",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "topopy>=1.0.4",
    "torch>=2.6.0",
    "treelib>=1.7.1",
    "pyhessian",
    "drawsvg>=2.4.0",
    "coloraide>=4.6",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
docs = [
    "jupyter>=1.1.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.14",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=0.29.1",
]

[tool.uv.sources]
pyhessian = { workspace = true } 

[tool.uv.workspace]
members = [
    "packages/pyhessian",
]

[tool.hatch.build.targets.wheel]
packages = ["src/landscaper"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore=["E501"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
examples = [
    "torch-geometric>=2.6.1",
    "torchvision>=0.22.0",
]

[tool.ruff.pydocstyle]
convention = "google"
